Fix button color on mobile

--- a/css/recipeFinder.less
+++ b/css/recipeFinder.less
@@ -119,6 +119,7 @@ a:hover {
          margin-bottom: @component-spacing;
          font-size: 1em;
          border-radius: 5px;
+         background-color: white;
       }
 
       h2, h3 {
